update depricated java
- Updated depricated "new Integer()" with "Integer.valueOf()"
- changed type of absTimeArr
- improving model builder